# SoftwareCICERO

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  multi.cpp
.github/workflows/: cmake.yml
include/: Buffers.h  CiceroBase.h  CiceroMulti.h  Const.h  Core.h  CoreOUT.h  Engine.h  Instruction.h  Manager.h
lib/: Buffer.cpp  CiceroBase.cpp  CiceroMulti.cpp  Core.cpp  CoreOUT.cpp  Engine.cpp  Instruction.cpp  Manager.cpp
src/: cicero.cpp
standalone/: base.cpp
test/: CMakeLists.txt  newTestMulti.cpp  protomata_results.csv  strings.txt  testMulti.cpp
test/programs/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+1261 more)
